Add back index page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -67,3 +67,13 @@ table {
 th {
   background-color: #f4f4f4;
 }
+
+img[alt="banner"] {
+  width: 100vw;   /* 视口宽度的100% */
+  height: 50vh;  /* 视口高度的100% */
+  object-fit: cover; /* 覆盖整个内容区域，可能会裁剪图片 */
+  position: fixed; /* 固定定位 */
+  top: 0;
+  left: 0;
+  z-index: -1; /* 将图片放到内容的后面 */
+}
