--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,29 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #f54490;
+  --ifm-color-primary-dark: #f3267e;
+  --ifm-color-primary-darker: #f31776;
+  --ifm-color-primary-darkest: #d00b60;
+  --ifm-color-primary-light: #f762a2;
+  --ifm-color-primary-lighter: #f771aa;
+  --ifm-color-primary-lightest: #fa9dc5;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #f94292;
+  --ifm-color-primary-dark: #f82380;
+  --ifm-color-primary-darker: #f81478;
+  --ifm-color-primary-darkest: #d60761;
+  --ifm-color-primary-light: #fa61a4;
+  --ifm-color-primary-lighter: #fa70ac;
+  --ifm-color-primary-lightest: #fc9ec7;
+  --ifm-background-color: #1d1b1b;
 }
-
 
 .center-image {
   display: block;
